--- a/src/main/resources/templates/client/board/boardList.html
+++ b/src/main/resources/templates/client/board/boardList.html
@@ -25,7 +25,8 @@
             <th:block th:if="${not #strings.isEmpty(boardList)}">
                 <tr class="text-center" th:each="board : ${boardList}" th:object="${board}" th:data-no="*{no}">
                     <td th:text="*{no}"></td>
-                    <td class="text-start goDetail" th:text="*{title}"></td>
+<!--                 <td class="text-start goDetail" th:text="*{title}"></td>-->
+                    <td><a th:href="@{/board/} + *{no}" th:text="*{title}" class="link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover"></a> </td>
                     <td class="name" th:text="*{name}"></td>
                     <td class="date" th:text="*{#temporals.format(regDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                     <td th:text="*{hit}"></td>
