--- a/src/main/resources/templates/client/main.html
+++ b/src/main/resources/templates/client/main.html
@@ -1,51 +1,59 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" class="h-100" data-bs-theme="auto" >
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" class="h-100" data-bs-theme="auto">
 <head>
     <th:block th:insert="~{template/client/fragments/block :: config}"></th:block>
-    <meta name="theme-color" content="#712cf9">
-    <link href="/css/cover.css" rel="stylesheet">
-    <link rel="canonical" href="https://getbootstrap.kr/docs/5.3/examples/cover/">
 </head>
-<body class="d-flex h-100 text-center-bg-dark">
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <!-- <header class="mb-auto">
-        <div>
-            <h3 class="float-md-start mb-0">Cover</h3>
-            <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
-            <a class="nav-link fw-bold py-1 px-0" href="#">Features</a>
-            <a class="nav-link fw-bold py-1 px-0" href="#">Contact</a>
-            </nav>
-</div>
-</header> -->
-    <header class="mb-auto">
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <!-- header 추가 내용 -->
-            <th:block th:insert="~{template/client/fragments/block ::header}"></th:block>
-        </nav>
-    </header>
+<body>
+<main>
+    <div class="container py-4">
+        <header class="pb-3 mb-2">
+            <th:block th:insert="~{template/client/fragments/block :: header}"></th:block>
+        </header>
 
-    <main class="px-3">
-        <h1>My Life Quotes</h1>
-        <p class="lead">
-            내일의 우리가 좋아지기를 바랄 때, 오늘의 나부터 노력하자.<br />
-            고통 없이 얻는 것은 어떤 가치도 없다<br/>
-            노력 없이는 얻는것은 없다. 꿈을 이루기 위해서는 노력이 필요하다.<br/>
-            꽃길만 걷자, 내 마음의 어둠은 내가 밝힌다
-        </p>
-        <p class="lead">
-            <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Learn more</a>
-        </p>
-    </main>
+        <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+            <div class="container-fluid py-5">
+                <h1 class="display-5 fw-bold">Effort Quotes</h1>
+                <p class="col-md-8 fs-4">노력 없이 얻는 것은 없다. There are no gains without pains.</p>
+                <p class="col-md-8 fs-4">끊임없이 도전하는 자만이 승리한다. The man who moves a mountain begins by carrying away small stones</p>
+                <button class="btn btn-primary btn-lg" type="button">Effort Quotes</button>
+            </div>
+        </div>
 
-<!-- 공통 레이아웃 페이지에서 th:insert="~{파일경로 :: fragment명}"으로 명시. Fragment명을 호출하여 레이아웃을 구성할 수 있다. -->
-    <footer class="mt-auto text-white-50">
-    <p>우리가 만든 첫 페이지</p>
-    </footer>
-</div>
+        <div class="row align-items-md-stretch">
+            <div class="col-md-6">
+                <div class="h-100 p-5 text-bg-dark rounded-3">
+                    <h2>갤러리 게시판 관리</h2>
+                    <p>썸네일 처리 게시판. 입력/수정/삭제 처리 완료. </p>
+                    <button class="btn btn-outline-light gallery" type="button">갤러리 게시판 리스트</button>
+                </div>
+            </div>
+
+
+            <div class="col-md-6">
+                <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+                    <h2>게시판 관리</h2>
+                    <p>자유 게시판. 입력/수정/삭제 및 댓글 작성까지 처리 완료.</p>
+                    <button class="btn btn-outline-secondary article" type="button">게시판 리스트</button>
+                </div>
+            </div>
+        </div>
+
+        <footer class="pt-3 mt-4 text-body-secondary border-top">
+            &copy; 2025
+        </footer>
+    </div>
+</main>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-<!--<script src="/assets/dist/js/bootstrap.bundle.min.js"></script>-->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="/js/common.js"></script>
+<script>
+    $(".gallery").on("click", ()=>{
+        locationProcess("/board/boardList");
+    });
+    $(".article").on("click", ()=>{
+        locationProcess("/article/articleList");
+    });
+</script>
 </body>
 </html>
