--- a/src/main/resources/templates/client/board/insertForm.html
+++ b/src/main/resources/templates/client/board/insertForm.html
@@ -27,6 +27,12 @@
                         <textarea class="form-control board-textarea" rows="8" th:field="*{content}"></textarea>
                     </div>
                 </div>
+                <div class="mb-3 row">
+                    <label class="col-sm-2 col-form-label">이미지 파일</label>
+                    <div class="col-sm-10">
+                        <input type="file" class="form-control" th:field="*{file}">
+                    </div>
+                </div>
             </div>
 
             <div class="text-end">
