--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -8,3 +8,12 @@ textarea { resize: none; }
 .board-msg-error-color{ color:red; }
 .board-required{ color:red; }
 
+/* 일반 게시판 적용 스타일 */
+.article-table-height{ height:500px; }
+
+/* 댓글 적용 스타일 */
+.cdate{ font-size:12px; }
+.reply-count{ color:red; font-size:12px; }
+
+/* clone 대상 적용 스타일 */
+#item-template{display:none;}
